--- a/projectdisp/pubspec.yaml
+++ b/projectdisp/pubspec.yaml
@@ -23,8 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
+  cloud_firestore: ^0.14.3  
+  http: ^0.12.2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
