--- a/projectdisp/android/app/build.gradle
+++ b/projectdisp/android/app/build.gradle
@@ -63,4 +63,5 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation platform('com.google.firebase:firebase-bom:26.1.0')
     implementation platform('com.google.firebase:firebase-firestore:20.0.0')
+    implementation platform('com.google.firebase:firebase-auth:20.0.1')
 }
