--- a/projectdisp/pubspec.yaml
+++ b/projectdisp/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   cloud_firestore: ^0.14.3  
   http: ^0.12.2
+  #omdb_dart: ^0.0.2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
