--- a/projectdisp/pubspec.yaml
+++ b/projectdisp/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   firebase_auth: ^0.18.3+1
+  convex_bottom_bar: ^2.6.0
 
 dev_dependencies:
   flutter_test:
