--- a/projectdisp/pubspec.yaml
+++ b/projectdisp/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   cupertino_icons: ^1.0.0
   firebase_auth: ^0.18.3+1
   convex_bottom_bar: ^2.6.0
+  carousel_slider: ^2.3.1
 
 dev_dependencies:
   flutter_test:
