--- a/projectdisp/pubspec.yaml
+++ b/projectdisp/pubspec.yaml
@@ -30,7 +30,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   firebase_auth: ^0.18.3+1
+  firebase_storage: ^4.0.1
   convex_bottom_bar: ^2.6.0
+  image_picker: ^0.6.6+5
 
 dev_dependencies:
   flutter_test:
